--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ footer {
     user-select: none;
 }
 
-audio, video {
-    position:relative;
-    z-index:-1;
+video {
+    position: relative;
+    z-index: -1;
 }
